--- a/index.html
+++ b/index.html
@@ -43,18 +43,10 @@
     <footer class="bg-dark text-center text-white">
         <div class="container p-4 pb-0">
           <section class="mb-4">
-            <a class="btn btn-outline-light btn-floating m-1" href="https://www.facebook.com/shlomo.gangul.3/" role="button"
-              ><i class="fab fa-facebook-f"></i
-            ></a>
-            <a class="btn btn-outline-light btn-floating m-1" href="https://www.instagram.com/shlomo_gangul/" role="button"
-              ><i class="fab fa-instagram"></i
-            ></a>
-            <a class="btn btn-outline-light btn-floating m-1" href="https://www.linkedin.com/in/shlomo-gangul/" role="button"
-              ><i class="fab fa-linkedin-in"></i
-            ></a>
-            <a class="btn btn-outline-light btn-floating m-1" href="https://github.com/SlumpG" role="button"
-              ><i class="fab fa-github"></i
-            ></a>
+            <a class="btn btn-outline-light btn-floating m-1" href="https://www.facebook.com/shlomo.gangul.3/" role="button"><i class="fab fa-facebook-f"></i></a>
+            <a class="btn btn-outline-light btn-floating m-1" href="https://www.instagram.com/shlomo_gangul/" role="button"><i class="fab fa-instagram"></i></a>
+            <a class="btn btn-outline-light btn-floating m-1" href="https://www.linkedin.com/in/shlomo-gangul/" role="button"><i class="fab fa-linkedin-in"></i></a>
+            <a class="btn btn-outline-light btn-floating m-1" href="https://github.com/SlumpG" role="button"><i class="fab fa-github"></i></a>
           </section>
         </div>
 
