--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
   <div id="containerDiv" class="container bg-secondary">
     <nav id="navBar" class="btn-group" role="group" aria-label="Basic example">
       <button id="register" class="btn btn-dark">Register</button>
-      <a class="nav-link btn-dark" href="https://tech-career-alternative.firebaseapp.com/" target="_blank">
+      <a class="nav-link btn-dark mx-auto" href="https://tech-career-alternative.firebaseapp.com/" target="_blank">
         <img class="logo" src="imgs/tech-carrier-logo.jpg" alt="tech carrier logo"></a>
-      <a class="nav-link btn-dark" href="#">
+      <a class="nav-link btn-dark mx-auto" href="#">
         <img class="logo" src="imgs/indi-logo.jpeg" alt="Indi_Com logo"></a>
       <button id="infoInCardForm" class="btn btn-dark">Card View</button>
       <button id="infoInTableForm" class="btn btn-dark">Chart View</button>
